refact: ajustes de menu-items
